@@ -1,3 +1,11 @@
+2010-11-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	PR gas/12198
+	* gas/arm/pr12198-1.d: New test.
+	* gas/arm/pr12918-1.s: Likewise.
+	* gas/arm/pr12198-2.d: Likewise.
+	* gas/arm/pr12918-2.s: Likewise.
+
 2010-11-10  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	* gas/arm/plt-1.s, gas/arm/plt-1.d: New test.
