@@ -1,3 +1,10 @@
+2010-11-15  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>
+
+	PR gas/12198
+	* config/tc-arm.c (arm_arch_v6m_only): New variable.
+	(aeabi_set_public_attributes): Ensure we only set the Operating System
+	Extension when we are on an M-profile core.
+
 2010-11-10  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	* config/tc-arm.c (do_t_branch): Treat (PLT) branches as wide.
